<resources>
    <string name="app_name">Uni Thalluwa</string>
    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Viraj</string>
    <string name="nav_header_subtitle">it18145526@my.sliit.lk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_Mark">Marks</string>
    <string name="menu_markingSchema">Marking Schema</string>
    <string name="menu_assignment">Assignments</string>
    <string name="menu_aboutgpa">GPA Schema</string>
    <string name="menu_req">Degree Requirements</string>
    <string name="registation">Registration</string>
    <string name="registaionNumber">Registration Number</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="email">E-mail</string>
    <string name="role">Role</string>
    <string name="semester">Semester</string>
    <string name="sem1">Semester 1</string>
    <string name="sem2">Semester 2</string>
    <string name="cgpa">Current CGPA</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="userProfile">User Profile</string>
    <string name="regNoShort">Reg Number</string>
    <string name="gpa">GPA</string>
    <string name="update">Update</string>
    <string name="title_activity_main_ui">Home</string>
    <string name="signout">Sign out</string>
    <string name="past_papers">Past Papers</string>
    <string name="papers">Papers</string>
    <string name="PastPapers">Past Papers</string>
    <string name="past_paper_year">Paper Year</string>
    <string name="year_of_the_paper">Year of the paper</string>
    <string name="checkSem2">2nd</string>
    <string name="papersAndAnswers">Papers and Answers</string>
    <string name="spm2019">SPM2019</string>
    <string name="spm2018">SPM2018</string>
    <string name="reset">Reset</string>
    <string name="addcamarks">Add CA Marks</string>
    <string name="subject">Subject</string>
    <string name="midmark">Mid Mark</string>
    <string name="assignments">Assignments</string>
    <string name="submit">Submit</string>
    <string name="studentname">Student Name</string>
    <string name="camarks">CA Marks</string>
    <string name="add">Add</string>
    <string name="editPapers">Edit Papers</string>
    <string name="module_name">Module Name</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="AcceptRules"><![CDATA[Accept , Uni Thalluwa Rules & Regulations]]></string>
    <string name="app_info">App Info</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="select_module">Select module</string>
    <string name="selectModules">Select Modules</string>
    <string name="no_file_is_selected">No file is selected</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="old_pass">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="deactivate">Deactivate</string>
    <string name="forgot_password">Forgot Password? Recover</string>
    <string name="application_desciption">This app devalped as the project of 1st year 2nd semester MAD (Mobile Application Development Project) Module</string>
    <string name="developer">Developer</string>
    <string name="scorpion"><![CDATA[</Scorpion>]]></string>
    <string-array name="roleItems">
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>Lecturer</item>
        <item>Assistant Lecturer</item>
        <item>Lab Assistant</item>
    </string-array>

    <string-array name="subjectList">
        <item>IP</item>
        <item>ICS</item>
        <item>MC</item>
        <item>CS</item>
        <item>OOP</item>
    </string-array>


    <string-array name="semester">
        <item> select semester</item>
        <item>Semester1</item>
        <item>Semester2</item>
    </string-array>

    <string-array name="year">
        <item>select year </item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 4</item>
    </string-array>

    <string-array name="module">
        <item> select module</item>
        <item>IP</item>
        <item>MC</item>
        <item>CS</item>
        <item>ICS</item>
    </string-array>
</resources>
