<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2DFFC107"
    tools:context=".User.Register">

    <TextView
        android:id="@+id/Registaion"
        android:layout_width="230dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/registation"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="391dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="8dp"
        android:background="#5CFF9800"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/regNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/registaionNumber"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textAlignment="textStart"
            android:textColor="#E4000000"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/roleDropbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/Role"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@android:color/background_dark" />

        <Spinner
            android:id="@+id/YearDropbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/yearDropdown" />

        <RadioButton
            android:id="@+id/sem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem1" />

        <RadioButton
            android:id="@+id/sem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem2" />

        <EditText
            android:id="@+id/gpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cgpa"
            android:inputType="textPersonName"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/regbtn"
        android:layout_width="127dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/action_register"
        android:textColor="#0E1753"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@android:drawable/editbox_dropdown_light_frame" />

    <Button
        android:id="@+id/ProPicture"
        android:layout_width="116dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#1B2A85"
        android:text="@string/profilePicture"
        android:textColor="#F1ECEC"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

</androidx.constraintlayout.widget.ConstraintLayout>