<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User_UI.ChangePassword">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/change_password"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_text_editor"
        android:ems="10"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_text_editor"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/changePassBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/custom_primary_button"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/change"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>