<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    android:orientation="vertical"
    tools:context=".About.Info">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/home"
        android:layout_marginTop="30dp"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/app_info"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="253dp"
        android:layout_height="188dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/sliitlogo" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="357dp"
        android:layout_height="84dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="casual"
        android:foregroundGravity="fill_vertical"
        android:gravity="fill"
        android:text="@string/application_desciption"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/developer"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="334dp"
        android:layout_height="196dp"
        app:srcCompat="@drawable/unithalluwalogo"
        android:layout_gravity="center"
        android:layout_marginTop="-30dp"/>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/scorpion"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>