<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerback1"
    tools:context=".User_UI.profile">

    <TextView
        android:id="@+id/userProfile"
        android:layout_width="268dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/userProfile"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="208dp"
        android:layout_height="257dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_text_editor"
            android:clickable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textAllCaps="true"
            android:textColor="#1B1A19"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_text_editor"
            android:clickable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textAllCaps="true"
            android:textColor="#1B1A19"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRegNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_text_editor"
            android:clickable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textAllCaps="true"
            android:textColor="#1B1A19"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_text_editor"
            android:clickable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textAllCaps="true"
            android:textColor="#1B1A19"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="140dp"
        android:layout_height="262dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676">

        <TextView
            android:id="@+id/lebelUserName"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="10dp"
            android:text="@string/prompt_username"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lebelEmail"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="10dp"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lebelRegNo"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="10dp"
            android:text="@string/regNoShort"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lebelRole"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="10dp"
            android:text="@string/role"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_primary_button"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:longClickable="true"
        android:src="@drawable/usericon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216"
        app:srcCompat="@drawable/usericon" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="112dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_remove_button"
        android:text="@string/deactivate"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <Button
        android:id="@+id/chpassword"
        android:layout_width="112dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_secondry_button"
        android:text="Change Pass"
        android:textColor="#F8F7F7"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <ProgressBar
        android:id="@+id/ProfileProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>